<resources>
    <string name="app_name" translatable="false">XGO</string>
    <!--    出现在file中的四个文件 分别为动作组和动作的工作区的保存文件-->
    <string name="wholeWorkspace" translatable="false">whole_robot_workspace.xml</string>
    <string name="wholeWorkspaceTemp" translatable="false">whole_robot_workspace_temp.xml</string>
    <string name="singleWorkspace" translatable="false">single_robot_workspace.xml</string>
    <string name="singleWorkspaceTemp" translatable="false">single_robot_workspace_temp.xml</string>
    <!--    在BlocklyActivityHelper #resetBlockFactory #reloadToolbox中更改了代码 但因为不属于同一个包 因此不再引用 此处仅做记录-->
    <!--    从assets中读取动作组toolbox文件 以实现自定义blockly-->
    <string name="wholeAssetsToolbox" translatable="false">assets_whole/whole_robot_toolbox.xml</string>
    <!--    从assets中读取动作组json文件 系统自带的动作-->
    <string name="wholeAssetsJson" translatable="false">assets_whole/whole_robot_blocks_self.json</string>
    <!--    加载到file中的toolbox文件-->
    <string name="wholeFileToolbox" translatable="false">whole_file_toolbox.xml</string>
    <!--    加载到file中的json文件-->
    <string name="wholeFileBlocks" translatable="false">whole_file_blocks_self.json</string>
    <!--    记录结束-->
    <!--    系统自带动作组文件名 自动添加用于识别的字符串前缀-->
    <string name="wholexmlHeadAuto" translatable="false">autowholexml</string>
    <!--    用户新增动作组文件名 自动添加用于识别的字符串前缀-->
    <string name="wholexmlHead" translatable="false">wholexml</string>
    <!--    用户新增动作组文件名 用于补全文件名的字符串后缀-->
    <string name="wholexmlTail" translatable="false">.xml</string>
    <!--    系统自带动作文件名 自动添加用于识别的字符串前缀-->
    <string name="singlexmlHeadAuto" translatable="false">autosinglexml</string>
    <!--    用户新增动作文件名 自动添加用于识别的字符串前缀-->
    <string name="singlexmlHead" translatable="false">singlexml</string>
    <!--    用户新增动作文件名 用于补全文件名的字符串后缀-->
    <string name="singlexmlTail" translatable="false">.xml</string>
    <!--    添加到控制界面的编程程序 存储在shareperference中的文件名-->
    <string name="controlProgramSp" translatable="false">control_program</string>
    <!--    添加到控制界面的编程程序 存储在shareperference中的键值 后面还要加0-4中的一个数字表示顺序-->
    <string name="controlProgramKey" translatable="false">pro</string>
    <!--    打开预览界面传输文件名的key值-->
    <string name="previewKey" translatable="false">preview</string>
    <!--    动作和动作组Fragment界面打开到Activity界面传输文件名的key值-->
    <string name="fragment2ActivityKey" translatable="false">kind</string>

    <!--语言-中文-->
    <string name="about">关于</string>
    <string name="setting">基础设置</string>
    <string name="preferences">我的爱好</string>
    <string name="turnoffBluetooth">退出App时关闭蓝牙</string>
    <string name="btyes">是</string>
    <string name="btno">否</string>
    <string name="language">语言选择</string>
    <string name="lanAuto">跟随系统</string>
    <string name="lan_zh" translatable="false">中文</string>
    <string name="lan_en" translatable="false">English</string>
    <string name="developmentOptions">开发选项</string>
    <string name="developyes">是</string>
    <string name="developno">否</string>
    <string name="developer">以开发者身份运行此项目</string>
    <string name="device">设备信息</string>
    <string name="version" translatable="false">version 3.2.2</string>
    <string name="btShake">请打开蓝牙和定位\n摇一摇手机，蓝牙将自动连接</string>
    <string name="btConnected">连接成功</string>
    <string name="btDisconnect">断开连接</string>
    <string name="btRename">重命名</string>
    <string name="selectDevice">请选择要连接的设备</string>
    <string name="searching">正在搜索，请稍等…… 如持续搜索不到或多次无法连接，请尝试重新启动主板或手机蓝牙</string>
    <string name="normal">普通</string>
    <string name="superior">高级</string>
    <string name="executing">正在执行</string>
    <string name="calibration">标定初始位置</string>
    <string name="calibrationMode">进入标定模式</string>
    <string name="calibrated">完成标定</string>
    <string name="leg">单腿控制</string>
    <string name="reset">Reset</string>
    <string name="leftforeleg">左前腿</string>
    <string name="rightforeleg">右前腿</string>
    <string name="righthindleg">右后腿</string>
    <string name="lefthindleg">左后腿</string>
    <string name="motor">舵机控制</string>
    <string name="top">上</string>
    <string name="middle">中</string>
    <string name="Bottom">下</string>
    <string name="actionGroup">动作组</string>
    <string name="action">动作</string>
    <string name="recordtick">记录勾选项</string>
    <string name="uninstall">卸载</string>
    <string name="recovery">恢复</string>
    <string name="viewAngle">观测角度</string>
    <string name="teachingModel">示教模式</string>
    <string name="hexadecimal">十六进制输入 不需要输入0x 格式：Addr+Order</string>
    <string name="noResponseWrite">无应答写</string>
    <string name="responseWrite">有应答写</string>
    <string name="readData">读数据</string>
    <string name="mdefault">默认</string>
    <string name="mcustom">自定义</string>
    <string name="setText">设置文字：</string>
    <string name="inputText">请输入你的文字</string>
    <string name="connectnow">现在连接</string>
    <string name="presentproject">这里展示项目</string>
    <string name="myProject">我的程序</string>
    <string name="morefc">更多功能</string>
    <string name="autoPowerOn">开机动作自启动：</string>
    <string name="carousel">动作轮播</string>
    <string name="actor_01_liedown">趴下</string>
    <string name="actor_02_standup">站起</string>
    <string name="actor_03_crawl">匍匐前进</string>
    <string name="actor_04_turnAround">转圈</string>
    <string name="actor_05_marktime">原地踏步</string>
    <string name="actor_06_squat">蹲起</string>
    <string name="actor_07_turnroll">转动Roll</string>
    <string name="actor_08_turnpitch">转动Pitch</string>
    <string name="actor_09_turnyaw">转动Yaw</string>
    <string name="actor_10_threeAxis">三轴联动</string>
    <string name="actor_11_pee">撒尿</string>
    <string name="actor_12_sitdown">坐下</string>
    <string name="actor_13_wavehand">招手</string>
    <string name="actor_14_stretch">伸懒腰</string>
    <string name="actor_15_wavebody">波浪</string>
    <string name="actor_16_waveside">摇摆</string>
    <string name="actor_17_pray">求食</string>
    <string name="actor_18_happy">找食物</string>
    <string name="actor_19_handshake">握手</string>
    <string name="actor">表演模式</string>
    <string name="xyz">XYZ-轴</string>
    <string name="pry">Roll/Pitch/Yaw</string>
    <string name="battery">电量</string>
    <string name="speed">速度</string>
    <string name="resetheight">重置高度</string>
    <string name="gyroscope">陀螺仪</string>
    <string name="gyroscopeOn">打开</string>
    <string name="gyroscopeOff">关闭</string>
    <string name="motion">整机速度</string>
    <string name="lowspeed">低速</string>
    <string name="normalspeed">普通</string>
    <string name="highspeed">高速</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="updatehex">更新固件</string>
    <string name="updatehexbtn">开始更新</string>
    <string name="hexversion">最新版本 2.5.0</string>
    <string name="rename">重命名</string>
    <string name="only_supports_english_and_numbers">Only_supports_English_and_Numbers</string>
    <string name="confim">确认</string>
    <string name="cancel">取消</string>
    <string name="renameText">支持最多20个英文或数字字符</string>
    <string name="all_rights_reserved">陆吾智能 版权所有 All Rights Reserved.</string>
    <string name="control_arm">机械臂控制</string>
    <string name="jaws">夹爪</string>
    <string name="actor_20_chickenhead">鸡头</string>
    <string name="actor_21_pushup">俯卧撑</string>
    <string name="actor_22_seek">张望</string>
    <string name="actor_23_dance">跳舞</string>
    <string name="actor_24_naughty">调皮</string>
    <string name="actor_0x80_grabhigh">上抓</string>
    <string name="actor_0x81_grabmiddle">中抓</string>
    <string name="actor_0x82_grablow">下抓</string>
    <string name="change_reference_frame"> 切换机械臂稳定模式 </string>
    <string name="privacy_first_exit">不同意</string>
    <string name="privacy_first_agree">同意并继续</string>
    <string name="update_hex">版本信息</string>
    <string name="download_file">下载</string>
    <string name="update_file">升级</string>
    <string name="hexVersionNow">固件版本</string>
    <string name="download_burning">固件烧录中</string>
    <string name="download_upgrading_message">请勿退出该页面</string>
    <string name="pop_servo_text">舵机</string>
    <string name="pop_servo_btn">设置中位</string>
    <string name="fragment_arm_open">开</string>
    <string name="fragment_arm_close">合</string>
    <string name="fragment_arm_gripper">夹爪</string>
    <string name="arm_relative_body">参照底座</string>
    <string name="arm_relative_ground">参照地面</string>
    <string name="pls_connect_bt">请连接蓝牙</string>
    <string name="control_stride">步 幅</string>
    <string name="control_height">整机高度</string>
    <string name="control_action">动作控制</string>
    <string name="rider_control">动作控制</string>
    <string name="main_hex">固件</string>
    <string name="main_calibrate">标定</string>
    <string name="main_about">关于</string>
    <string name="main_setting">设置</string>
    <string name="servo_centering">舵机中位</string>
    <string name="servo_centering_finish">舵机中位设置完成</string>
    <string name="calibrationModeOn">已进入标定模式</string>
    <string name="actor_rider_01_rocking">左右摇摆</string>
    <string name="actor_rider_02_shifting">前进后退</string>
    <string name="actor_rider_03_altitude">高低起伏</string>
    <string name="actor_rider_04_zigzag">四方蛇形</string>
    <string name="actor_rider_05_lift">升降旋转</string>
    <string name="actor_rider_06_trembling">关节交替</string>
    <string name="rider_height_reset">重置</string>
    <string name="rider_height">高度调节</string>
    <string name="rider_roll_button">点击按钮开启Roll</string>
</resources>
