<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".mActivity.ControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                >
                <ImageButton
                    android:id="@+id/controlBtnExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="15dp"
                    android:background="#00000000"
                    android:src="@drawable/back"
                    />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="15dp"
                    android:background="#00000000"
                    android:src="@drawable/back"
                    android:visibility="invisible"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/controlBtnControl"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/backgound_rec_blue2"
                    android:text="@string/control_action"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/controlBtnArm"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/backgound_rec_blue2"
                    android:text="@string/control_arm"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <ImageButton
                        android:id="@+id/controlBtnPro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginRight="17dp"
                        android:layout_marginTop="15dp"
                        android:background="#00000000"
                        android:src="@drawable/btn_pro_press"/>


                    <ImageButton
                        android:id="@+id/controlBtnMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_marginRight="17dp"
                        android:layout_marginTop="15dp"
                        android:background="#00000000"
                        android:src="@drawable/developer_press" />
                </LinearLayout>



    <!--            <ImageButton-->
    <!--                android:id="@+id/controlBtnConnect"-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginRight="17dp"-->
    <!--                android:background="#00000000"-->
    <!--                android:scaleType="centerInside"-->
    <!--                android:src="@drawable/bluetooth"-->
    <!--                android:visibility="gone"/>-->

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <FrameLayout
                android:id="@+id/controlFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/controlFrameCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#55222222"
                android:gravity="center"
                android:text="@string/executing"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:visibility="gone"/>
            <!--    <androidx.viewpager.widget.ViewPager-->
            <!--        android:id="@+id/controlViewPager"-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="0dp"-->
            <!--        android:layout_weight="1"/>-->
        </RelativeLayout>

    </LinearLayout>
    <View
        android:id="@+id/controlGrayBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#66000000"/>
</RelativeLayout>