<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mFragment.ButtonFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonLineVer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonLineVer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonLineVer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonLineHor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonLineHor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />
    <!--for battery and speed-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonLineVer1.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonLineVer2.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/buttonLineHor1.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="156dp" />

    <ImageView
        android:id="@+id/buttonTxtBattery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/buttery0"
        app:layout_constraintBottom_toTopOf="@+id/buttonLineHor1"
        app:layout_constraintEnd_toEndOf="@+id/buttonLineVer2" />

    <ImageView
        android:id="@+id/buttonTxtSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/speed0"
        app:layout_constraintBottom_toTopOf="@+id/buttonLineHor1"
        app:layout_constraintStart_toEndOf="@+id/buttonTxtBattery" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:gravity="bottom|center"
        android:text="@string/battery"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLineHor1.5"
        app:layout_constraintEnd_toEndOf="@+id/buttonLineVer1.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:gravity="bottom|center"
        android:text="@string/speed"
        android:textColor="@color/colorRed"

        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLineHor1.5"
        app:layout_constraintStart_toEndOf="@+id/buttonLineVer2.5" />

    <com.luwu.xgo_robot.mView.ButtonView
        android:id="@+id/buttonButtonLeft"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:downPress="@drawable/button1_back_press"
        app:layout_constraintBottom_toTopOf="@+id/buttonLineHor2"
        app:layout_constraintStart_toStartOf="@+id/buttonLineVer1"
        app:leftPress="@drawable/button1_left_press"
        app:noPress="@drawable/button1_nopress"
        app:rightPress="@drawable/button1_right_press"
        app:upPress="@drawable/button1_forward_press" />

    <com.luwu.xgo_robot.mView.ButtonView
        android:id="@+id/buttonButtonRight"
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLineHor2"
        app:layout_constraintEnd_toStartOf="@+id/buttonLineVer3"
        app:leftPress="@drawable/button2_left_press"
        app:noPress="@drawable/button2_nopress"
        app:rightPress="@drawable/button2_right_press" />

    <com.luwu.xgo_robot.mView.VerticalSeekBar
        android:id="@+id/buttonSeekBar"
        android:layout_width="260dp"
        android:layout_height="40dp"
        app:allBackground="@drawable/seekbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonLineHor2"
        app:pastBackground="@drawable/seekbar_past_shape"
        app:thumbBackground="@drawable/seekbar_thumb" />

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonLineHor2">
        <Button
            android:id="@+id/buttonBtnReset"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_press"
            android:textColor="#ffffff"
            android:text="@string/resetheight"
             />

        <TextView
            android:id="@+id/textHeight"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="60"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>